fixed background from contacts not showing

--- a/css/contact.css
+++ b/css/contact.css
@@ -666,6 +666,23 @@
     flex-shrink: 0;
 }
 
+@media(max-width: 1300px) {
+    #contact-details{
+        padding-left: 50px;
+    }
+}
+
+@media(max-width: 1200px) {
+    #contact-details{
+        padding-left: 0;
+    }
+}
+
+@media(max-width: 1100px) {
+    #contact-details{
+        display: none !important;
+    }
+}
 
 /* Media Query für Bildschirmbreite von maximal 768px */
 @media(max-width: 768px) {
